<?xml version="1.0" encoding="utf-8"?>


<resources>

    <string name="app_name">SRP Browser</string>
    <string name="toggle_tab_switcher_menu_item">Toggle switcher</string>
    <string name="add_tab_menu_item">New tab</string>
    <string name="clear_tabs_menu_item">Clear all tabs</string>
    <string name="settings_menu_item">Settings</string>
    <string name="tab_title">Tab %1$d</string>
    <string name="removed_tab_snack_bar">Removed %1$s</string>
    <string name="cleared_tabs_snack_bar">Removed all tabs</string>
    <string name="undo">Undo</string>
    <string name="paragraph">Seven Ribbons Pictures Video House based in Noida, India is the youth based start up organisation dealing in Digital Marketing And has expertise in Video Production in making videos like Documentaries, Corporate Film Makers, Explainer videos etc along for all India regions. Sitting at a favorable situation in the capital we take into account whole country along with advantage of gifted and imaginative assets of our talented and inspired team. We are one of the cost savvy and energetic video and film production houses/organization in Delhi NCR offering excellent types of assistance particularly in regions of the Northern Region.</string>
    <string name="no_tabs_available">No tabs Available</string>
    <string name="browser_history">Browser History</string>
    <string name="clear_history">Clear History</string>
    <string name="no_history">No History</string>
    <string name="about_app">About App</string>
    <string name="about_srp">About SRP</string>
    <string name="about_developers">About Developers</string>
    <string name="there_are_no_downloads_at_the_moment">There are no Downloads at the moment</string>
    <string name="enter_bookmark_name">Enter Bookmark Name</string>
    <string name="enter_url">Enter Url</string>
    <string name="whoops">WHOOPS</string>
    <string name="search_bookmarks">Search Bookmarks</string>
    <string name="no_bookmarks_here">No bookmarks here</string>
    <string name="name_of_bookmark">Name of bookmark</string>
    <string name="site_url">Site URL</string>
    <string name="umang_sharma">Umang Sharma</string>
    <string name="www_linkedin_com_in_0729">www.linkedin.com/in/0729/</string>
    <string name="www_linkedin_com_in_ravi_beniwal_a7bb55198">www.linkedin.com/in/ravi-beniwal-a7bb55198/</string>
    <string name="yashas_h_majmudar">Yashas H Majmudar</string>
    <string name="www_linkedin_com_in_yashashm08052001">www.linkedin.com/in/yashashm08052001/</string>
    <string name="siddharth_maurya">Siddharth Maurya</string>
    <string name="www_linkedin_com_in_siddharth_maurya_2792401aa">www.linkedin.com/in/siddharth-maurya-2792401aa</string>
    <string name="ravi_beniwal">Ravi Beniwal</string>
    <string name="app_version">App Version</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="operating_system">Operating System</string>
    <string name="url">url</string>
    <string name="search_here">Search here</string>
    <string name="back">Back</string>
    <string name="bookmark">Bookmark</string>
    <string name="download">Download</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="incognito_mode">Incognito Mode</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="adblock">AdBlock</string>
    <string name="history">History</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_and_close_all_tabs">Clear data and close all tabs</string>
    <string name="downloads">Downloads</string>
    <string name="desktop_site">Desktop Site</string>
    <string name="donate">Donate</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>


</resources>
